# Easy-eCoC-CE

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.bat  easy-ecoc.spec  ecoc-gui.py  ecoc_service.py  generate_test_cert.sh  main.py  pubkeygen.py  pyproject.toml  requirements.txt  samarbeidsportalen.py  vegvesen_data.db
.github/workflows/: build-windows.yml
docs/: test-certificate-guide.md
xml_templates/: Example.xml
